[SWEP-80] 날짜기반 태그검색, 태그기반 이미지검색 스웨거 응답예시 추가, tsoa 응답 형식 통일 인터페이스 구현
